feat: shrouded forest leaf piles